<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayerstructure.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/UpperMenuIcons"
            android:src="@drawable/play_inactive" />

        <ImageView
            style="@style/UpperMenuIcons"
            android:src="@drawable/library_inactive" />

        <ImageView
            style="@style/UpperMenuIcons"
            android:src="@drawable/search_active" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp">

                <ImageView
                    style="@style/UpperMenuIcons"
                    android:src="@drawable/search_active" />

                <TextView
                    style="@style/SearchText"
                    android:text="@string/internal_storage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp">

                <ImageView
                    style="@style/UpperMenuIcons"
                    android:src="@drawable/search_active" />

                <TextView
                    style="@style/SearchText"
                    android:text="@string/sd_card" />

            </LinearLayout>

            <TextView
                style="@style/SearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:text="@string/search_info" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
